--- a/notebooks/Eda.ipynb
+++ b/notebooks/Eda.ipynb
@@ -131,6 +131,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Acá podemos ver los diferentes outliers (que enrealidad no son outliers pero no nos sirven para entrenar los datos)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
